# tegratrace

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SCOPE.md
.github/workflows/: ci.yml
shaders/: cube_field.vert  cull.comp  env_to_cube.comp  ibl_irradiance.comp  ibl_prefilter.comp  mesh.frag  mesh.vert  pbr.frag  pbr.mesh  pbr.task  pbr.vert  triangle.frag  triangle.vert
src/: main.cpp
src/capture/: FrameCapture.cpp  FrameCapture.h  FrameReplayer.cpp  FrameReplayer.h
src/core/: Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  Window.cpp  Window.h
src/metrics/: MetricsCollector.cpp  MetricsCollector.h
src/profiling/: GPUProfiler.cpp  GPUProfiler.h
src/renderer/: Buffer.cpp  Buffer.h  PBRModel.cpp  PBRModel.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderWatcher.h
src/ui/: DebugUI.cpp  DebugUI.h
src/validation/: RegressionTester.cpp  RegressionTester.h
